--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,43 +1,3 @@
-<template>
-<!-- navbar -->
-  <div class="home">
-  <!-- navbar -->
-  <NavbarIntern/>
-  <!-- carousel -->
-  <CarouselIntern/>
-  <!-- about -->
-  <AboutIntern/>
-  <!-- our activity -->
-  <ActivityIntern/>
-  <!-- podcast -->
-  <PodastIntern/>
-  <!-- our comannders -->
-  <ComanndersIntern/>
-  <!-- sosmed -->
-  <SosmedIntern/>
-  <!-- footer -->
-  <FooterIntern/>
-  </div>
-
-</template>
-
-<script>
-// @ is an alias to /src
-// import HelloWorld from '@/components/HelloWorld.vue'
-import NavbarIntern from '@/components/NavbarIntern.vue'
-import AboutIntern from '@/components/AboutIntern.vue'
-
-
-export default {
-  name: 'Home',
-  components: {
-    NavbarIntern,
-    AboutIntern,
-  }
-}
-</script>
-<style type="text/css">
-  <style type="text/css">
   /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
   html {
     line-height: 1.15;
@@ -1773,6 +1733,11 @@ export default {
   .left-0 {
     left: 0
   }
+  
+  .left-15 {
+    left: 15px  
+  }
+
 
   .resize-none {
     resize: none
@@ -4587,6 +4552,9 @@ export default {
       width: 8rem
     }
 
+    .md\:w-34 {
+      width: 9rem
+    }
     .md\:w-40 {
       width: 10rem
     }
@@ -4836,5 +4804,3 @@ position: absolute;
   height: 100%;
 
 }
-
-</style>
