--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -275,7 +275,7 @@
 
   a {
     color: inherit;
-    text-decoration: inherit
+    text-decoration: none
   }
 
   button,
@@ -984,6 +984,10 @@
     height: 12rem
   }
 
+  .h-50 {
+    height: 30vh
+  }
+
   .h-60 {
     height: 60vh
   }
@@ -995,7 +999,9 @@
   .h-65 {
     height: 65vh
   }
-
+  .h-68 {
+    height: 19rem
+  }
   .h-auto {
     height: auto
   }
@@ -1035,6 +1041,7 @@
   .text-3xl {
     font-size: 1.875rem
   }
+
 
   .leading-5 {
     line-height: 1.25rem
@@ -1128,6 +1135,11 @@
   .my-16 {
     margin-top: 4rem;
     margin-bottom: 4rem
+  }
+
+  .my-18 {
+    margin-top: 5rem;
+    margin-bottom: 5rem
   }
 
   .my-auto {
@@ -1233,6 +1245,11 @@
     margin-left: 1.5rem
   }
 
+  .ml-8 {
+    margin-left: 3rem
+  }
+
+
   .mt-8 {
     margin-top: 2rem
   }
@@ -1260,6 +1277,9 @@
 
   .mt-12 {
     margin-top: 3rem
+  }
+  .mt-14 {
+    margin-top: 6rem
   }
 
   .mb-16 {
@@ -1467,12 +1487,12 @@
   }
 
     .px-8 {
-    padding-left: 5;
+    padding-left: 5rem;
     padding-right: 5rem
   }
 
   .py-5 {
-    padding-top: 1.25rem;
+    padding-top: 10.25rem;
     padding-bottom: 1.25rem
   }
 
@@ -1519,6 +1539,10 @@
   .py-20 {
     padding-top: 5rem;
     padding-bottom: 5rem
+  }
+  .py-24 {
+    padding-top: 6rem;
+    padding-bottom: 6rem
   }
 
   .py-32 {
@@ -2058,6 +2082,9 @@
     width: 16rem
   }
 
+  .w-68 {
+    width: 20rem
+  }
   .w-128 {
     width: 24rem
   }
@@ -4301,6 +4328,11 @@
 
     .md\:text-3xl {
       font-size: 1.875rem
+    }
+
+  
+    .md\:text-4xl {
+      font-size: 2.875rem
     }
 
     .md\:m-1 {
